[HBK - DevOps] Synchronizing hbkdaq repository main branch

--- a/setup.cfg
+++ b/setup.cfg
@@ -6,10 +6,10 @@ author_email = ext_VGOEL@hbm.com
 description = Setup, control and acquire data from the Genesis Highspeed systems via python.
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = https://github.com/hbk-world/ghs-gendaqapi-python
+url = https://github.com/hbkworld/ghs-gendaqapi-python
 project_urls =
     # Bug Tracker = https://github.com/pypa/sampleproject/issues
-    Documentation = https://hbk-world.github.io/ghs-gendaqapi-python/html/index.html
+    Documentation = https://github.com/hbkworld/ghs-gendaqapi-python/blob/main/docs/html/index.html
 classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: MIT License
